divide and rename LandParcelGroup into CultivableLandParcel.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -78,9 +78,10 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
+# - "backend/cells/last_events_cells#list"
+# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
-# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
@@ -90,10 +91,19 @@
 # - "backend/cells/purchases_bar_cells#show"
 # - "backend/cells/purchases_expense_bar_cells#show"
 # - "backend/cells/rss_cells#show"
+# - "backend/cultivable_land_parcels#create"
+# - "backend/cultivable_land_parcels#destroy"
+# - "backend/cultivable_land_parcels#edit"
+# - "backend/cultivable_land_parcels#index"
+# - "backend/cultivable_land_parcels#list"
+# - "backend/cultivable_land_parcels#new"
+# - "backend/cultivable_land_parcels#show"
+# - "backend/cultivable_land_parcels#update"
 # - "backend/dashboards#list_my_future_events"
 # - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#search"
 # - "backend/dashboards#tools"
+# - "backend/data_view/manure_management_plans#show"
 # - "backend/document_archives#show"
 # - "backend/documents#create"
 # - "backend/documents#destroy"
@@ -338,7 +348,6 @@
 # - "backend/production_supports#new"
 # - "backend/production_supports#show"
 # - "backend/production_supports#update"
-# - "backend/productions#fertilization"
 # - "backend/productions#list_procedure"
 # - "backend/productions#list_support"
 # - "backend/products#create"
@@ -462,7 +471,7 @@ consult_entities:
 - "backend/entities#list_outgoing_payments"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions"
+- "backend/entities#list_subscriptions" #?
 - "backend/entities#show"
 
 # Consult the journal entries
@@ -706,7 +715,7 @@ manage_entities:
 - "backend/entities#list_meeting_participations"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions"
+- "backend/entities#list_subscriptions" #?
 - "backend/entities#new"
 - "backend/entities#picture"
 - "backend/entities#update"
