--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ env:
   - DB=sqlite3
 before_install:
   - "ci/setup"
+  - "gem update --system 1.8.25"
   - "gem install rake -v=0.9.6 --no-ri --no-rdoc"
   - "gem install pg mysql sqlite3 --no-ri --no-rdoc"
-  - "gem install rails -v=2.3.14 --no-ri --no-rdoc"
+  - "gem install rails -v=2.3.18 --no-ri --no-rdoc"
   - "rake _0.9.6_ gems:install --trace"
   - "rake _0.9.6_ db:migrate"
 script: "rake _0.9.6_ test"
