Cleans code via rake clean

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -40,6 +40,7 @@
 # - "backend/animal_medicines#new"
 # - "backend/animal_medicines#show"
 # - "backend/animal_medicines#update"
+# - "backend/animals#animal_sanitary_list"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -78,10 +79,9 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
-# - "backend/cells/last_events_cells#list"
-# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
+# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
