--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -38,6 +38,17 @@
 #
 # == Fixture: productions
 #
+# productions_001:
+#   activity_id: 1
+#   campaign_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   product_nature_id: 1
+#   static_support: true
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 productions_001:
   activity_id: 1
   campaign_id: 1
