add Prescription and Worker model (MVC / CRUD)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -79,9 +79,10 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
+# - "backend/cells/last_events_cells#list"
+# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
-# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
@@ -251,6 +252,14 @@
 # - "backend/preferences#new"
 # - "backend/preferences#show"
 # - "backend/preferences#update"
+# - "backend/prescriptions#create"
+# - "backend/prescriptions#destroy"
+# - "backend/prescriptions#edit"
+# - "backend/prescriptions#index"
+# - "backend/prescriptions#list"
+# - "backend/prescriptions#new"
+# - "backend/prescriptions#show"
+# - "backend/prescriptions#update"
 # - "backend/procedures#create"
 # - "backend/procedures#destroy"
 # - "backend/procedures#edit"
@@ -381,6 +390,14 @@
 # - "backend/settlements#show"
 # - "backend/settlements#update"
 # - "backend/snippets#toggle"
+# - "backend/workers#create"
+# - "backend/workers#destroy"
+# - "backend/workers#edit"
+# - "backend/workers#index"
+# - "backend/workers#list"
+# - "backend/workers#new"
+# - "backend/workers#show"
+# - "backend/workers#update"
 
 # Access to the minimum
 __minimum__:
