--- a/test/fixtures/outgoing_deliveries.yml
+++ b/test/fixtures/outgoing_deliveries.yml
@@ -27,7 +27,6 @@
 #  lock_version     :integer          default(0), not null
 #  mode_id          :integer
 #  number           :string(255)
-#  planned_at       :datetime
 #  recipient_id     :integer          not null
 #  reference_number :string(255)
 #  sale_id          :integer
@@ -56,7 +55,7 @@ outgoing_deliveries_001:
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000001'
-  planned_at: <%=Time.now-7.days %>
+  sent_at: <%=Time.now-7.days %>
   recipient_id: 1
   id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -68,7 +67,7 @@ outgoing_deliveries_002:
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000002'
-  planned_at: <%=Time.now%>
+  sent_at: <%=Time.now%>
   recipient_id: 1
   id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -80,7 +79,7 @@ outgoing_deliveries_003:
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000003'
-  planned_at: <%=Time.now+7.days %>
+  sent_at: <%=Time.now+7.days %>
   id: 3
   recipient_id: 1
   sale_id: 3
