--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -73,13 +73,12 @@
 
 product_natures_001:
   active: true
-  category_id: 1
   charge_account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   depreciable: false
   id: 1
-  individual: true
+  population_counting: "unitary"
   name: "Vache"
   number: "LI1"
   purchasable: true
@@ -93,12 +92,11 @@ product_natures_001:
 
 product_natures_002:
   active: true
-  category_id: 2
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 2
   depreciable: true
   id: 2
-  individual: true
+  population_counting: "unitary"
   name: "Lorem ipsum 2"
   number: "LI2"
   purchasable: true
@@ -112,12 +110,11 @@ product_natures_002:
 
 product_natures_003:
   active: true
-  category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   depreciable: true
   id: 3
-  individual: true
+  population_counting: "unitary"
   name: "Lorem ipsum 3"
   number: "LI3"
   purchasable: true
