--- a/config/rights.yml
+++ b/config/rights.yml
@@ -79,9 +79,10 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
+# - "backend/cells/last_events_cells#list"
+# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
-# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
@@ -1062,7 +1063,7 @@ manage_products:
 - "backend/product_natures#create"
 - "backend/product_natures#destroy"
 - "backend/product_natures#edit"
-- "backend/product_natures#list" #?
+- "backend/product_natures#list"
 - "backend/product_natures#list_price_templates"
 - "backend/product_natures#new"
 - "backend/product_natures#update"
