--- a/config/rights.yml
+++ b/config/rights.yml
@@ -380,6 +380,14 @@
 # - "backend/professions#update"
 # - "backend/purchase_items#show"
 # - "backend/sale_items#show"
+# - "backend/services#create"
+# - "backend/services#destroy"
+# - "backend/services#edit"
+# - "backend/services#index"
+# - "backend/services#list"
+# - "backend/services#new"
+# - "backend/services#show"
+# - "backend/services#update"
 # - "backend/settlements#create"
 # - "backend/settlements#destroy"
 # - "backend/settlements#edit"
