--- a/test/fixtures/analytic_repartitions.yml
+++ b/test/fixtures/analytic_repartitions.yml
@@ -48,3 +48,14 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+analytic_repartitions_001:
+  affected_on: 2009-07-19
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  journal_entry_item_id: 1
+  percentage: 100
+  production_id: 1
+  state: "Lorem ipsum"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
