--- a/test/fixtures/incidents.yml
+++ b/test/fixtures/incidents.yml
@@ -51,13 +51,14 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of incidents
-# incidents_001:
-#   id: 1
-#   name: 'Incident 1'
-
-# incidents_002:
-#   id: 2
-#   name: 'Incident 2'
+incidents_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "Lorem ipsum"
+  nature: "mammite"
+  observed_at: 2009-07-19 19:13:59 +02:00
+  target_id: 10
+  target_type: "Animal"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
