--- a/test/fixtures/inventory_items.yml
+++ b/test/fixtures/inventory_items.yml
@@ -50,3 +50,14 @@
 #   updater_id: 1
 #   warehouse_id: 1
 #
+inventory_items_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  inventory_id: 1
+  product_id: 10
+  quantity: 1
+  theoric_quantity: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  warehouse_id: 1
