--- a/test/fixtures/meeting_participations.yml
+++ b/test/fixtures/meeting_participations.yml
@@ -42,3 +42,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+meeting_participations_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  meeting_id: 1
+  participant_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
