--- a/test/fixtures/operation_tasks.yml
+++ b/test/fixtures/operation_tasks.yml
@@ -51,13 +51,13 @@
 #   updater_id: 1
 #   verb: "Lorem ipsum"
 #
-
-
-# # Empty samples of operation_tasks
-# operation_tasks_001:
-#   id: 1
-#   name: 'OperationTask 1'
-
-# operation_tasks_002:
-#   id: 2
-#   name: 'OperationTask 2'
+operation_tasks_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  operation_id: 1
+  prorated: true
+  subject_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  verb: "consume"
