--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -45,3 +45,12 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+outgoing_delivery_items_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  delivery_id: 1
+  id: 1
+  product_id: 10
+  quantity: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
