--- a/test/fixtures/prescriptions.yml
+++ b/test/fixtures/prescriptions.yml
@@ -42,13 +42,9 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of prescriptions
-# prescriptions_001:
-#   id: 1
-#   name: 'Prescription 1'
-
-# prescriptions_002:
-#   id: 2
-#   name: 'Prescription 2'
+prescriptions_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
