--- a/test/fixtures/procedure_variables.yml
+++ b/test/fixtures/procedure_variables.yml
@@ -49,3 +49,15 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+procedure_variables_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  indicator: "population"
+  measure_quantity: 1
+  measure_unit: "unity"
+  procedure_id: 1
+  role: "target"
+  target_id: 10
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
