--- a/test/fixtures/procedures.yml
+++ b/test/fixtures/procedures.yml
@@ -50,3 +50,14 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+procedures_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  natures: "animal_cares"
+  nomen: "animal_treatment"
+  production_id: 1
+  provisional: true
+  state: "done"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
