--- a/test/fixtures/product_indicator_data.yml
+++ b/test/fixtures/product_indicator_data.yml
@@ -53,3 +53,16 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+product_indicator_data_001:
+  boolean_value: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  indicator: "net_weight"
+  indicator_datatype: "measure"
+  measure_value_unit: "kilogram"
+  measure_value_value: "250.00"
+  measured_at: 2009-07-19 19:13:59 +02:00
+  product_id: 10
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
