--- a/test/fixtures/product_links.yml
+++ b/test/fixtures/product_links.yml
@@ -44,13 +44,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of product_links
-# product_links_001:
-#   id: 1
-#   name: 'ProductLink 1'
-
-# product_links_002:
-#   id: 2
-#   name: 'ProductLink 2'
+product_links_001:
+  carried_id: 1
+  carrier_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
