--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -68,6 +68,7 @@ product_nature_variants_001:
   horizontal_rotation: 0
   id: 1
   nature_id: 1
+  unit_name: "unit"
   nature_name: "Lorem ipsum"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
@@ -78,6 +79,7 @@ product_nature_variants_002:
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
   horizontal_rotation: 0
+  unit_name: "unit"
   id: 2
   nature_id: 1
   nature_name: "Lorem ipsum"
