--- a/test/fixtures/product_prices.yml
+++ b/test/fixtures/product_prices.yml
@@ -57,7 +57,6 @@
 
 product_prices_001:
   amount: 1196
-  computed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
@@ -66,13 +65,12 @@ product_prices_001:
   product_id: 1
   supplier_id: 1
   tax_id: 1
-  template_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 1
 
 product_prices_002:
   amount: 1196
-  computed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
@@ -81,13 +79,12 @@ product_prices_002:
   product_id: 1
   supplier_id: 1
   tax_id: 1
-  template_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 1
 
 product_prices_003:
   amount: 1196
-  computed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
@@ -96,13 +93,12 @@ product_prices_003:
   product_id: 1
   supplier_id: 1
   tax_id: 1
-  template_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 1
 
 product_prices_004:
   amount: 1196
-  computed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
@@ -111,13 +107,12 @@ product_prices_004:
   product_id: 1
   supplier_id: 1
   tax_id: 1
-  template_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 1
 
 product_prices_005:
   amount: 1196
-  computed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
@@ -126,6 +121,6 @@ product_prices_005:
   product_id: 1
   supplier_id: 3
   tax_id: 1
-  template_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 1
