--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -45,13 +45,12 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of production_supports
-# production_supports_001:
-#   id: 1
-#   name: 'ProductionSupport 1'
-
-# production_supports_002:
-#   id: 2
-#   name: 'ProductionSupport 2'
+production_supports_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  exclusive: true
+  id: 1
+  production_id: 1
+  storage_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
