--- a/test/fixtures/transfers.yml
+++ b/test/fixtures/transfers.yml
@@ -51,3 +51,12 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+transfers_001:
+  amount: 120
+  client_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  currency: "EUR"
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
