--- a/test/fixtures/listing_node_items.yml
+++ b/test/fixtures/listing_node_items.yml
@@ -46,7 +46,7 @@ listing_node_items_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  nature: "Lorem ipsum"
+  nature: "nature"
   node_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
