--- a/config/rights.yml
+++ b/config/rights.yml
@@ -14,6 +14,7 @@
 # - "backend/affairs#index"
 # - "backend/affairs#list"
 # - "backend/affairs#select"
+# - "backend/aggregators#index"
 # - "backend/aggregators#show"
 # - "backend/analytic_repartitions#create"
 # - "backend/analytic_repartitions#destroy"
@@ -106,8 +107,6 @@
 # - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#search"
 # - "backend/dashboards#tools"
-# - "backend/data_view/manure_management_plans#show"
-# - "backend/data_view/veterinary_booklets#show"
 # - "backend/document_archives#show"
 # - "backend/documents#create"
 # - "backend/documents#destroy"
