--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -86,3 +86,16 @@ product_nature_variants_002:
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
 
+product_nature_variants_004:
+  active: true
+  commercial_name: "Building"
+  created_at: "2009-07-19 19:13:59 +02:00"
+  creator_id: 1
+  horizontal_rotation: 0
+  unit_name: "unit"
+  id: 4
+  nature_id: 4
+  nature_name: "Building"
+  updated_at: "2009-07-19 19:13:59 +02:00"
+  updater_id: 1
+
