--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -126,3 +126,21 @@ product_natures_003:
   updater_id: 1
   variety: "plant"
 
+product_natures_004:
+  active: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  depreciable: true
+  id: 4
+  population_counting: "unitary"
+  name: "Building"
+  number: "BUILDING"
+  purchasable: true
+  reductible: true
+  saleable: true
+  storable: true
+  subscribing: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variety: "building"
+
