--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -20,32 +20,38 @@
 #
 # == Table: journal_entries
 #
-#  balance                :decimal(19, 4)   default(0.0), not null
-#  created_at             :datetime         not null
-#  created_on             :date             not null
-#  creator_id             :integer
-#  credit                 :decimal(19, 4)   default(0.0), not null
-#  debit                  :decimal(19, 4)   default(0.0), not null
-#  financial_year_id      :integer
-#  id                     :integer          not null, primary key
-#  journal_id             :integer          not null
-#  lock_version           :integer          default(0), not null
-#  number                 :string(255)      not null
-#  original_credit        :decimal(19, 4)   default(0.0), not null
-#  original_currency      :string(3)
-#  original_currency_rate :decimal(19, 10)  default(0.0), not null
-#  original_debit         :decimal(19, 4)   default(0.0), not null
-#  printed_on             :date             not null
-#  resource_id            :integer
-#  resource_type          :string(255)
-#  state                  :string(32)       default("draft"), not null
-#  updated_at             :datetime         not null
-#  updater_id             :integer
+#  absolute_credit    :decimal(19, 4)   default(0.0), not null
+#  absolute_currency  :string(3)
+#  absolute_debit     :decimal(19, 4)   default(0.0), not null
+#  balance            :decimal(19, 4)   default(0.0), not null
+#  created_at         :datetime         not null
+#  created_on         :date             not null
+#  creator_id         :integer
+#  credit             :decimal(19, 4)   default(0.0), not null
+#  currency           :string(3)
+#  debit              :decimal(19, 4)   default(0.0), not null
+#  financial_year_id  :integer
+#  id                 :integer          not null, primary key
+#  journal_id         :integer          not null
+#  lock_version       :integer          default(0), not null
+#  number             :string(255)      not null
+#  printed_on         :date             not null
+#  real_credit        :decimal(19, 4)   default(0.0), not null
+#  real_currency      :string(3)
+#  real_currency_rate :decimal(19, 10)  default(0.0), not null
+#  real_debit         :decimal(19, 4)   default(0.0), not null
+#  resource_id        :integer
+#  resource_type      :string(255)
+#  state              :string(32)       not null
+#  updated_at         :datetime         not null
+#  updater_id         :integer
 #
 #
 # == Fixture: journal_entries
 #
 # journal_entries_001:
+#   absolute_credit: 0
+#   absolute_debit: 0
 #   balance: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
@@ -55,10 +61,10 @@
 #   id: 1
 #   journal_id: 1
 #   number: "Lorem ipsum"
-#   original_credit: 0
-#   original_currency_rate: 0
-#   original_debit: 0
 #   printed_on: 2009-07-19
+#   real_credit: 0
+#   real_currency_rate: 0
+#   real_debit: 0
 #   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -68,18 +74,18 @@ journal_entries_001:
   created_on: 2007-07-22
   creator_id: 1
   credit: 0
-  original_credit: 0
-  original_debit: 0
   debit: 0
   financial_year_id: 1
   id: 1
   journal_id: 1
   number: "XYZ0001"
   printed_on: 2007-07-20
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  real_currency_rate: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  original_currency: 'EUR'
-  original_currency_rate: 1
   state: draft
 
 journal_entries_002:
@@ -87,37 +93,37 @@ journal_entries_002:
   created_on: 2009-07-19
   creator_id: 1
   financial_year_id: 1
-  original_credit: 0
-  original_debit: 0
   credit: 0
   debit: 0
   id: 2
   journal_id: 1
   number: "XYZ0002"
   printed_on: 2007-07-25
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  real_currency_rate: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  original_currency: 'EUR'
-  original_currency_rate: 1
   state: draft
 
 journal_entries_003:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
-  original_credit: 0
   financial_year_id: 1
-  original_debit: 0
   credit: 0
   debit: 0
   id: 3
   journal_id: 1
   number: "XYZ0003"
   printed_on: 2007-05-19
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  real_currency_rate: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  original_currency: 'EUR'
-  original_currency_rate: 1
   state: draft
 
 journal_entries_004:
@@ -126,16 +132,16 @@ journal_entries_004:
   creator_id: 1
   credit: 0
   debit: 0
-  original_credit: 0
-  original_debit: 0
   financial_year_id: 1
   id: 4
   journal_id: 1
   number: "XYZ0004"
   printed_on: 2007-01-19
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  real_currency_rate: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  original_currency: 'EUR'
-  original_currency_rate: 1
   state: draft
 
