--- a/test/fixtures/journal_entry_items.yml
+++ b/test/fixtures/journal_entry_items.yml
@@ -20,75 +20,115 @@
 #
 # == Table: journal_entry_items
 #
-#  account_id        :integer          not null
-#  balance           :decimal(19, 4)   default(0.0), not null
-#  bank_statement_id :integer
-#  created_at        :datetime         not null
-#  creator_id        :integer
-#  credit            :decimal(19, 4)   default(0.0), not null
-#  debit             :decimal(19, 4)   default(0.0), not null
-#  description       :text
-#  entry_id          :integer          not null
-#  id                :integer          not null, primary key
-#  journal_id        :integer
-#  letter            :string(8)
-#  lock_version      :integer          default(0), not null
-#  name              :string(255)      not null
-#  original_credit   :decimal(19, 4)   default(0.0), not null
-#  original_debit    :decimal(19, 4)   default(0.0), not null
-#  position          :integer
-#  state             :string(32)       default("draft"), not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer
+#  absolute_credit           :decimal(19, 4)   default(0.0), not null
+#  absolute_currency         :string(3)        not null
+#  absolute_debit            :decimal(19, 4)   default(0.0), not null
+#  account_id                :integer          not null
+#  balance                   :decimal(19, 4)   default(0.0), not null
+#  bank_statement_id         :integer
+#  created_at                :datetime         not null
+#  creator_id                :integer
+#  credit                    :decimal(19, 4)   default(0.0), not null
+#  cumulated_absolute_credit :decimal(19, 4)   default(0.0), not null
+#  cumulated_absolute_debit  :decimal(19, 4)   default(0.0), not null
+#  currency                  :string(3)        not null
+#  debit                     :decimal(19, 4)   default(0.0), not null
+#  description               :text
+#  entry_id                  :integer          not null
+#  entry_number              :string(255)      not null
+#  financial_year_id         :integer          not null
+#  id                        :integer          not null, primary key
+#  journal_id                :integer          not null
+#  letter                    :string(8)
+#  lock_version              :integer          default(0), not null
+#  name                      :string(255)      not null
+#  position                  :integer
+#  printed_on                :date             not null
+#  real_credit               :decimal(19, 4)   default(0.0), not null
+#  real_currency             :string(3)        not null
+#  real_currency_rate        :decimal(19, 10)  default(0.0), not null
+#  real_debit                :decimal(19, 4)   default(0.0), not null
+#  state                     :string(32)       not null
+#  updated_at                :datetime         not null
+#  updater_id                :integer
 #
 #
 # == Fixture: journal_entry_items
 #
 # journal_entry_items_001:
+#   absolute_credit: 0
+#   absolute_currency: "Lorem ipsum"
+#   absolute_debit: 0
 #   account_id: 1
 #   balance: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   credit: 0
+#   cumulated_absolute_credit: 0
+#   cumulated_absolute_debit: 0
+#   currency: "Lorem ipsum"
 #   debit: 0
 #   entry_id: 1
+#   entry_number: "Lorem ipsum"
+#   financial_year_id: 1
 #   id: 1
+#   journal_id: 1
 #   name: "Lorem ipsum"
-#   original_credit: 0
-#   original_debit: 0
+#   printed_on: 2009-07-19
+#   real_credit: 0
+#   real_currency: "Lorem ipsum"
+#   real_currency_rate: 0
+#   real_debit: 0
 #   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 journal_entry_items_001:
+  absolute_credit: 0
+  absolute_currency: "EUR"
+  absolute_debit: 0
   account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   credit: 0
-  original_credit: 0
-  original_debit: 0
+  currency: 'EUR'
   debit: 0
+  entry_id: 1
+  entry_number: "XYZ0001"
+  financial_year_id: 1
   id: 1
   journal_id: 1
   name: "Lorem ipsum"
-  entry_id: 1
+  printed_on: 2007-07-20
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  state: draft
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  state: draft
 
 journal_entry_items_002:
+  absolute_credit: 0
+  absolute_currency: "EUR"
+  absolute_debit: 0
   account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   credit: 0
-  original_credit: 0
-  original_debit: 0
+  currency: 'EUR'
   debit: 0
+  entry_id: 1
+  entry_number: "XYZ0001"
+  financial_year_id: 1
   id: 2
   journal_id: 1
   name: "Lorem ipsum 2"
-  entry_id: 1
+  printed_on: 2007-07-20
+  real_credit: 0
+  real_debit: 0
+  real_currency: 'EUR'
+  state: draft
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  state: draft
 
