Adds ProductOwnership without removing product#owner_id and external

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -339,6 +339,14 @@
 # - "backend/product_nature_variants#show"
 # - "backend/product_nature_variants#update"
 # - "backend/product_natures#show"
+# - "backend/product_ownerships#create"
+# - "backend/product_ownerships#destroy"
+# - "backend/product_ownerships#edit"
+# - "backend/product_ownerships#index"
+# - "backend/product_ownerships#list"
+# - "backend/product_ownerships#new"
+# - "backend/product_ownerships#show"
+# - "backend/product_ownerships#update"
 # - "backend/product_price_listings#list_prices"
 # - "backend/product_prices#show"
 # - "backend/product_process_phases#create"
