--- a/test/fixtures/product_ownerships.yml
+++ b/test/fixtures/product_ownerships.yml
@@ -18,31 +18,41 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: activities
+# == Table: product_ownerships
 #
 #  created_at   :datetime         not null
 #  creator_id   :integer
-#  depth        :integer
-#  description  :string(255)
-#  family       :string(255)
 #  id           :integer          not null, primary key
-#  lft          :integer
 #  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
 #  nature       :string(255)      not null
-#  parent_id    :integer
-#  rgt          :integer
+#  owner_id     :integer
+#  product_id   :integer          not null
 #  started_at   :datetime
 #  stopped_at   :datetime
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
-require 'test_helper'
+#
+# == Fixture: product_ownerships
+#
+# product_ownerships_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   nature: "Lorem ipsum"
+#   product_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-class ActivityTest < ActiveSupport::TestCase
 
-  test "presence of fixtures" do
-    # assert_equal 2, Activity.count
-  end
 
-end
+product_ownerships_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  nature: "mine"
+  product_id: 1
+  owner_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
