--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -24,7 +24,7 @@
 #  creator_id   :integer
 #  depth        :integer
 #  description  :string(255)
-#  family       :string(255)      not null
+#  family       :string(255)
 #  id           :integer          not null, primary key
 #  lft          :integer
 #  lock_version :integer          default(0), not null
@@ -43,7 +43,6 @@
 # activities_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   family: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
 #   nature: "Lorem ipsum"
