--- a/test/fixtures/analytic_repartitions.yml
+++ b/test/fixtures/analytic_repartitions.yml
@@ -20,41 +20,41 @@
 #
 # == Table: analytic_repartitions
 #
-#  affected_on           :date             not null
-#  created_at            :datetime         not null
-#  creator_id            :integer
-#  description           :text
-#  id                    :integer          not null, primary key
-#  journal_entry_item_id :integer          not null
-#  lock_version          :integer          default(0), not null
-#  percentage            :decimal(19, 4)   not null
-#  production_id         :integer          not null
-#  state                 :string(255)      not null
-#  updated_at            :datetime         not null
-#  updater_id            :integer
+#  affectation_percentage :decimal(19, 4)   not null
+#  affected_on            :date             not null
+#  created_at             :datetime         not null
+#  creator_id             :integer
+#  id                     :integer          not null, primary key
+#  journal_entry_item_id  :integer          not null
+#  lock_version           :integer          default(0), not null
+#  production_id          :integer          not null
+#  state                  :string(255)      not null
+#  updated_at             :datetime         not null
+#  updater_id             :integer
 #
 #
 # == Fixture: analytic_repartitions
 #
 # analytic_repartitions_001:
+#   affectation_percentage: 0
 #   affected_on: 2009-07-19
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   journal_entry_item_id: 1
-#   percentage: 0
 #   production_id: 1
 #   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 analytic_repartitions_001:
   affected_on: 2009-07-19
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   journal_entry_item_id: 1
-  percentage: 100
+  affectation_percentage: 100
   production_id: 1
   state: "Lorem ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
