--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -27,7 +27,7 @@
 #  id                :integer          not null, primary key
 #  lock_version      :integer          default(0), not null
 #  position          :integer
-#  product_nature_id :integer          not null
+#  product_nature_id :integer
 #  started_at        :datetime
 #  state             :string(255)
 #  static_support    :boolean          not null
@@ -44,7 +44,6 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   product_nature_id: 1
 #   static_support: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
