--- a/config/rights.yml
+++ b/config/rights.yml
@@ -3,11 +3,9 @@
 # - "backend/activities#create"
 # - "backend/activities#destroy"
 # - "backend/activities#edit"
-# - "backend/activities#index"
 # - "backend/activities#list"
-# - "backend/activities#list_production"
+# - "backend/activities#list_productions"
 # - "backend/activities#new"
-# - "backend/activities#show"
 # - "backend/activities#update"
 # - "backend/affairs#attach"
 # - "backend/affairs#detach"
@@ -139,19 +137,21 @@
 # - "backend/documents#show"
 # - "backend/documents#update"
 # - "backend/entity_addresses#show"
-# - "backend/entity_addresses#unroll"
 # - "backend/entity_links#show"
+# - "backend/gaps#create"
+# - "backend/gaps#destroy"
+# - "backend/gaps#edit"
+# - "backend/gaps#list"
+# - "backend/gaps#new"
+# - "backend/gaps#update"
 # - "backend/incidents#create"
 # - "backend/incidents#destroy"
 # - "backend/incidents#edit"
-# - "backend/incidents#index"
 # - "backend/incidents#list"
-# - "backend/incidents#list_procedure"
+# - "backend/incidents#list_procedures"
 # - "backend/incidents#new"
-# - "backend/incidents#show"
 # - "backend/incidents#update"
-# - "backend/incoming_deliveries#list_item"
-# - "backend/incoming_deliveries#show"
+# - "backend/incoming_deliveries#list_items"
 # - "backend/incoming_delivery_items#new"
 # - "backend/interfacers#autocomplete"
 # - "backend/interfacers#product_trackings"
@@ -222,7 +222,6 @@
 # - "backend/operation_tasks#new"
 # - "backend/operation_tasks#show"
 # - "backend/operation_tasks#update"
-# - "backend/operations#unroll"
 # - "backend/organic_matters#create"
 # - "backend/organic_matters#destroy"
 # - "backend/organic_matters#edit"
@@ -1126,7 +1125,7 @@ manage_purchases:
 - "backend/incoming_deliveries#create"
 - "backend/incoming_deliveries#destroy"
 - "backend/incoming_deliveries#edit"
-- "backend/incoming_deliveries#index"
+- "backend/incoming_deliveries#index" #?
 - "backend/incoming_deliveries#list"
 - "backend/incoming_deliveries#new"
 - "backend/incoming_deliveries#update"
