--- a/test/fixtures/catalogs.yml
+++ b/test/fixtures/catalogs.yml
@@ -22,7 +22,7 @@
 #
 #  all_taxes_included :boolean          not null
 #  by_default         :boolean          not null
-#  code               :string(10)
+#  code               :string(20)       not null
 #  created_at         :datetime         not null
 #  creator_id         :integer
 #  currency           :string(3)        not null
@@ -32,6 +32,7 @@
 #  name               :string(255)      not null
 #  updated_at         :datetime         not null
 #  updater_id         :integer
+#  usage              :string(20)       not null
 #
 #
 # == Fixture: catalogs
@@ -39,6 +40,7 @@
 # catalogs_001:
 #   all_taxes_included: true
 #   by_default: true
+#   code: "Lorem ipsum"
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   currency: "Lorem ipsum"
@@ -46,6 +48,7 @@
 #   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   usage: "Lorem ipsum"
 #
 catalogs_001:
   id: 1
@@ -57,6 +60,7 @@ catalogs_001:
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
+  usage: 'sale'
 
 catalogs_002:
   id: 2
@@ -68,5 +72,6 @@ catalogs_002:
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
+  usage: 'sale'
 
 
