--- a/test/fixtures/gaps.yml
+++ b/test/fixtures/gaps.yml
@@ -18,96 +18,62 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: affairs
+# == Table: gaps
 #
 #  accounted_at     :datetime
-#  closed           :boolean          not null
-#  closed_at        :datetime
+#  affair_id        :integer          not null
+#  amount           :decimal(19, 4)   default(0.0), not null
 #  created_at       :datetime         not null
 #  creator_id       :integer
-#  credit           :decimal(19, 4)   default(0.0), not null
 #  currency         :string(3)        not null
-#  debit            :decimal(19, 4)   default(0.0), not null
+#  direction        :string(255)      not null
+#  entity_id        :integer          not null
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer
 #  lock_version     :integer          default(0), not null
-#  third_id         :integer          not null
+#  number           :string(255)      not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #
 #
-# == Fixture: affairs
+# == Fixture: gaps
 #
-# affairs_001:
-#   closed: true
+# gaps_001:
+#   affair_id: 1
+#   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   credit: 0
 #   currency: "Lorem ipsum"
-#   debit: 0
+#   direction: "Lorem ipsum"
+#   entity_id: 1
 #   id: 1
-#   third_id: 1
+#   number: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-affairs_001:
-  closed: true
+gaps_001:
+  affair_id: 1
+  amount: 0.53
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  credit: 0
   currency: "EUR"
-  debit: 0
+  direction: "profit"
+  entity_id: 1
   id: 1
-  third_id: 1
+  number: "G001"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-affairs_002:
-  closed: true
+gaps_002:
+  affair_id: 1
+  amount: 0.17
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  credit: 411.23
   currency: "EUR"
-  debit: 411.23
+  direction: "loss"
+  entity_id: 2
   id: 2
-  third_id: 1
+  number: "G002"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
-affairs_003:
-  closed: false
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  credit: 236
-  currency: "EUR"
-  debit: 158
-  id: 3
-  third_id: 1
-  updated_at: 2009-07-19 19:13:59 +02:00
-  updater_id: 1
-
-affairs_004:
-  closed: false
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  credit: 1236
-  currency: "EUR"
-  debit: 158
-  id: 4
-  third_id: 1
-  updated_at: 2009-07-19 19:13:59 +02:00
-  updater_id: 1
-
-affairs_005:
-  closed: false
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  credit: 236
-  currency: "EUR"
-  debit: 1158
-  id: 5
-  third_id: 1
-  updated_at: 2009-07-19 19:13:59 +02:00
-  updater_id: 1
-
