--- a/test/fixtures/sale_natures.yml
+++ b/test/fixtures/sale_natures.yml
@@ -22,13 +22,14 @@
 #
 #  active                  :boolean          default(TRUE), not null
 #  by_default              :boolean          not null
+#  catalog_id              :integer          not null
 #  created_at              :datetime         not null
 #  creator_id              :integer
-#  currency                :string(3)
+#  currency                :string(3)        not null
 #  description             :text
 #  downpayment             :boolean          not null
-#  downpayment_minimum     :decimal(19, 4)   default(0.0), not null
-#  downpayment_percentage  :decimal(19, 4)   default(0.0), not null
+#  downpayment_minimum     :decimal(19, 4)   default(0.0)
+#  downpayment_percentage  :decimal(19, 4)   default(0.0)
 #  expiration_delay        :string(255)      not null
 #  id                      :integer          not null, primary key
 #  journal_id              :integer
@@ -48,11 +49,11 @@
 # sale_natures_001:
 #   active: true
 #   by_default: true
+#   catalog_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   downpayment: true
-#   downpayment_minimum: 0
-#   downpayment_percentage: 0
 #   expiration_delay: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
@@ -63,6 +64,7 @@
 #
 sale_natures_001:
   active: true
+  catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
@@ -79,6 +81,7 @@ sale_natures_001:
 
 sale_natures_002:
   active: true
+  catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
