--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -26,10 +26,11 @@
 #  creator_id        :integer
 #  id                :integer          not null, primary key
 #  lock_version      :integer          default(0), not null
+#  name              :string(255)      not null
 #  position          :integer
 #  product_nature_id :integer
 #  started_at        :datetime
-#  state             :string(255)
+#  state             :string(255)      not null
 #  static_support    :boolean          not null
 #  stopped_at        :datetime
 #  updated_at        :datetime         not null
@@ -44,6 +45,8 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   name: "Lorem ipsum"
+#   state: "Lorem ipsum"
 #   static_support: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -54,6 +57,8 @@ productions_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  name: "Wheat 2013"
+  state: "started"
   product_nature_id: 1
   static_support: true
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -65,6 +70,8 @@ productions_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  name: "Wheat 2014"
+  state: "draft"
   product_nature_id: 2
   static_support: false
   updated_at: 2009-07-19 19:13:59 +02:00
