--- a/test/fixtures/event_natures.yml
+++ b/test/fixtures/event_natures.yml
@@ -18,12 +18,11 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: meeting_natures
+# == Table: event_natures
 #
 #  active       :boolean          default(TRUE), not null
 #  created_at   :datetime         not null
 #  creator_id   :integer
-#  duration     :integer
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
@@ -31,8 +30,35 @@
 #  updater_id   :integer
 #  usage        :string(60)
 #
-require 'test_helper'
+#
+# == Fixture: event_natures
+#
+# event_natures_001:
+#   active: true
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   name: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
+event_natures_001:
+  active: true
+  name: Default event nature
+  usage: manual
+  id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
 
-class MeetingNatureTest < ActiveSupport::TestCase
 
-end
+event_natures_002:
+  active: true
+  name: Useless event nature
+  usage: manual
+  id: 2
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
