--- a/test/fixtures/event_participations.yml
+++ b/test/fixtures/event_participations.yml
@@ -18,46 +18,45 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: procedure_variables
+# == Table: event_participations
 #
-#  created_at       :datetime         not null
-#  creator_id       :integer
-#  id               :integer          not null, primary key
-#  indicator        :string(255)      not null
-#  lock_version     :integer          default(0), not null
-#  measure_quantity :decimal(19, 4)   not null
-#  measure_unit     :string(255)      not null
-#  procedure_id     :integer          not null
-#  role             :string(255)      not null
-#  target_id        :integer          not null
-#  updated_at       :datetime         not null
-#  updater_id       :integer
+#  created_at     :datetime         not null
+#  creator_id     :integer
+#  event_id       :integer          not null
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  participant_id :integer          not null
+#  state          :string(255)
+#  updated_at     :datetime         not null
+#  updater_id     :integer
 #
 #
-# == Fixture: procedure_variables
+# == Fixture: event_participations
 #
-# procedure_variables_001:
+# event_participations_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   event_id: 1
 #   id: 1
-#   indicator: "Lorem ipsum"
-#   measure_quantity: 0
-#   measure_unit: "Lorem ipsum"
-#   procedure_id: 1
-#   role: "Lorem ipsum"
-#   target_id: 1
+#   participant_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-procedure_variables_001:
+
+event_participations_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  indicator: "population"
-  measure_quantity: 1
-  measure_unit: "unity"
-  procedure_id: 1
-  role: "target"
-  target_id: 10
+  event_id: 1
+  participant_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+event_participations_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  event_id: 2
+  participant_id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
