--- a/test/fixtures/intervention_casts.yml
+++ b/test/fixtures/intervention_casts.yml
@@ -18,48 +18,48 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: meeting_natures
+# == Table: intervention_casts
 #
-#  active       :boolean          default(TRUE), not null
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  duration     :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer
-#  usage        :string(60)
+#  actor_id        :integer          not null
+#  created_at      :datetime         not null
+#  creator_id      :integer
+#  id              :integer          not null, primary key
+#  intervention_id :integer          not null
+#  lock_version    :integer          default(0), not null
+#  updated_at      :datetime         not null
+#  updater_id      :integer
+#  variable        :string(255)      not null
 #
 #
-# == Fixture: meeting_natures
+# == Fixture: intervention_casts
 #
-# meeting_natures_001:
-#   active: true
+# intervention_casts_001:
+#   actor_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
+#   intervention_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   variable: "Lorem ipsum"
 #
-meeting_natures_001:
-  active: true
-  name: Default event nature
-  usage: manual
+
+intervention_casts_001:
+  actor_id: 10
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
   id: 1
+  intervention_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variable: "grinder"
+
+intervention_casts_002:
+  actor_id: 7
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  updated_at: 2006-07-19 19:13:59 +02:00
-  updater_id: 1
-
-
-meeting_natures_002:
-  active: true
-  name: Useless event nature
-  usage: manual
   id: 2
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  updated_at: 2006-07-19 19:13:59 +02:00
+  intervention_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variable: "grindable"
