--- a/test/fixtures/inventories.yml
+++ b/test/fixtures/inventories.yml
@@ -21,7 +21,7 @@
 # == Table: inventories
 #
 #  accounted_at      :datetime
-#  changes_reflected :boolean
+#  changes_reflected :boolean          not null
 #  created_at        :datetime         not null
 #  created_on        :date             not null
 #  creator_id        :integer
@@ -39,6 +39,7 @@
 # == Fixture: inventories
 #
 # inventories_001:
+#   changes_reflected: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
 #   creator_id: 1
