--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -18,70 +18,56 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: events
+# == Table: operations
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :text
-#  duration     :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  nature_id    :integer          not null
-#  place        :string(255)
-#  started_at   :datetime         not null
-#  stopped_at   :datetime
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at      :datetime         not null
+#  creator_id      :integer
+#  duration        :integer
+#  id              :integer          not null, primary key
+#  intervention_id :integer          not null
+#  lock_version    :integer          default(0), not null
+#  position        :integer
+#  started_at      :datetime         not null
+#  stopped_at      :datetime
+#  updated_at      :datetime         not null
+#  updater_id      :integer
 #
 #
-# == Fixture: events
+# == Fixture: operations
 #
-# events_001:
+# operations_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
-#   nature_id: 1
+#   intervention_id: 1
 #   started_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-
-events_001:
-  # entity_id: 1
-  nature_id: 1
-  started_at: <%=(t=Time.now-1.month).to_s(:db)%>
-  name: Nothing
-  # responsible_id: 1
+operations_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
   id: 1
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  updated_at: 2006-07-19 19:13:59 +02:00
+  intervention_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-events_002:
-  # entity_id: 1
-  nature_id: 1
-  started_at: <%=(t=Time.now-1.year).to_s(:db)%>
-  name: Nothing too
-  # responsible_id: 1
+operations_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
   id: 2
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  updated_at: 2006-07-19 19:13:59 +02:00
+  intervention_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-events_003:
-  # entity_id: 1
-  nature_id: 1
-  started_at: <%=(t=Time.now-2.year).to_s(:db)%>
-  name: Nothing too again
-  # responsible_id: 1
+operations_003:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
   id: 3
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  updated_at: 2006-07-19 19:13:59 +02:00
+  intervention_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
