Renames Procedures to Procedo and enahnces lib

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -397,12 +397,13 @@
 # - "backend/products#create"
 # - "backend/products#destroy"
 # - "backend/products#edit"
-# - "backend/products#list_content_product"
-# - "backend/products#list_group"
-# - "backend/products#list_incident"
-# - "backend/products#list_indicator"
-# - "backend/products#list_member"
-# - "backend/products#list_place"
+# - "backend/products#list_contained_products"
+# - "backend/products#list_groups"
+# - "backend/products#list_incidents"
+# - "backend/products#list_indicators"
+# - "backend/products#list_intervention_casts"
+# - "backend/products#list_members"
+# - "backend/products#list_places"
 # - "backend/products#new"
 # - "backend/products#show"
 # - "backend/products#update"
