Introduces Code class which permits to manipulate and identify code (like ruby) properly during code generations

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -257,14 +257,13 @@
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
-# - "backend/plants#index"
 # - "backend/plants#list"
-# - "backend/plants#list_incident"
-# - "backend/plants#list_indicator"
-# - "backend/plants#list_place"
+# - "backend/plants#list_incidents"
+# - "backend/plants#list_indicators"
+# - "backend/plants#list_intervention_casts"
+# - "backend/plants#list_places"
 # - "backend/plants#new"
 # - "backend/plants#picture"
-# - "backend/plants#show"
 # - "backend/plants#update"
 # - "backend/preferences#create"
 # - "backend/preferences#destroy"
@@ -496,7 +495,7 @@ configure_company:
 - "backend/sequences#create"
 - "backend/sequences#destroy"
 - "backend/sequences#edit"
-- "backend/sequences#index"
+- "backend/sequences#index" #?
 - "backend/sequences#list"
 - "backend/sequences#load"
 - "backend/sequences#new"
