--- a/config/rights.yml
+++ b/config/rights.yml
@@ -1084,7 +1084,7 @@ manage_productions:
 - "backend/productions#create"
 - "backend/productions#destroy"
 - "backend/productions#edit"
-- "backend/productions#index"
+- "backend/productions#index" #?
 - "backend/productions#list"
 - "backend/productions#new"
 - "backend/productions#show" #?
